work in progress
wstęp do okienka dialogowego do wyboru wycieczki do wysłania przez BT

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -62,4 +62,7 @@
     <string name="synch">Choose a device to synchroize with</string>
     <string name="ranking_title_text">Your longest trips</string>
     <string name="ranking_body_text">Ranking was created based on the length of the trips in km</string>
+    <string name="dialog_choose_synch">Choose a trip to send</string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
 </resources>
